Fix before and after col alignment

--- a/src/app/(sidebar)/transaction-dashboard/styles.scss
+++ b/src/app/(sidebar)/transaction-dashboard/styles.scss
@@ -40,6 +40,7 @@
       pre {
         font-family: var(--sds-ff-monospace);
         line-height: pxToRem(18px);
+        word-break: break-all;
       }
     }
   }
